<resources>
    <string name="app_name">云音乐</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_dialog_title">玩命加载中...</string>
    <string name="newarby">附近</string>
    <string name="title">一笑过千山</string>
    <string name="knowledgemap">知识地图</string>
    <string name="pwd">请输入密码</string>
    <string name="youwant">带小红点的RecyclerView</string>
    <string name="smaller">超小号字体</string>
    <string name="small">小号字体</string>
    <string name="normal">正常字体</string>
    <string name="big">大号字体</string>
    <string name="bigger">超大号字体</string>
    <string name="tomap">视频</string>
    <string name="tomap1">视频页面</string>
    <string name="swiperecycler">侧滑删除</string>
    <string name="baidumap">RecyclerView嵌套RecyclerView</string>
    <string name="alpha">下拉放大的上拉渐变的页面</string>
    <string name="alpha２">下拉放大的上拉渐变的页面２</string>
    <string name="recyclerload">自己完成的recycler上拉加载下拉刷新</string>
    <string name="popup">PopupWindow</string>
    <string name="jsactivity">JSActivity</string>
    <string name="universaladapter">万能Adapter</string>
    <string name="phone_persion">通讯录</string>
    <string name="update">更新软件</string>
    <string name="refresh">动画刷新</string>
    <string name="music">音乐</string>
    <string name="wvandlv">webview与listview</string>
    <string name="photo_album">相册</string>
    <string name="login">登 录</string>
    <string name="username">liuhui</string>
    <string name="password">liuhui</string>
    <string name="blureed">高斯模糊seekbar</string>
    <string name="blureed1">高斯模糊weather</string>
    <string name="progress">进度条</string>
    <string name="progresswait">等待</string>
    <string name="dicuss">评论页</string>
    <string name="action_settings">设置</string>
    <string name="scale_up_show_behavior">com.carporange.cloudmusic.widget.ScaleUpShowBehavior</string>

    <string-array name="detail">
        <item>详情页</item>
        <item>Fragment带侧边栏</item>
        <item>侧滑效果</item>
    </string-array>
</resources>
