<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.world.myapplication.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/smaller"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_two"
        android:orderInCategory="100"
        android:title="@string/small"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_three"
        android:orderInCategory="100"
        android:title="@string/normal"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_four"
        android:orderInCategory="100"
        android:title="@string/big"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_five"
        android:orderInCategory="100"
        android:title="@string/bigger"
        app:showAsAction="never"/>
</menu>
