<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.carporange.cloudmusic.fragment.AnchorRadioFragment">

        <com.carporange.cloudmusic.widget.ViewPagerCycle
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shaptext_background"
            android:hint="@string/pwd"/>

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginTop="6dp"
            android:background="@drawable/shaptext_background"
            android:padding="1dp"
            android:scaleType="centerInside"
            android:src="@mipmap/headimg"/>   <!--加上 android:padding=”1dp”，效果更好！-->

        <TextView
            android:id="@+id/blureed"
            style="@style/textview"
            android:text="@string/blureed"/>

        <TextView
            android:id="@+id/blureed1"
            style="@style/textview"
            android:text="@string/blureed1"/>

        <TextView
            android:id="@+id/progressbar"
            style="@style/textview"
            android:text="BottomSheetDialog 显示/隐藏"/>

        <cn.world.liuhui.widget.NumberProgressBar
            android:id="@+id/down_progress"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/progresswait"
            style="@style/textview"
            android:text="@string/progresswait"/>

        <TextView
            android:id="@+id/dicuss"
            style="@style/textview"
            android:text="@string/dicuss"/>


        <TextView
            android:id="@+id/popup"
            style="@style/textview"
            android:text="@string/popup"/>

        <TextView
            android:id="@+id/jsactivity"
            style="@style/textview"
            android:text="@string/jsactivity"/>
    </LinearLayout>
</ScrollView>