<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.carporange.cloudmusic.fragment.SongMenuFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.carporange.cloudmusic.widget.CircleTextProgressbar
                android:id="@+id/circle_progress"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_35"
                android:gravity="center"
                android:text="0%"
                />

            <com.carporange.cloudmusic.widget.CircleTextProgressbar
                android:id="@+id/circle_progress_opposite"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_35"
                android:clickable="true"
                android:gravity="center"
                android:text="100%"
                app:in_circle_color="@color/state_color"
                />

            <TextView
                android:id="@+id/go"
                style="@style/textview"
                android:text="@string/youwant"/>

            <TextView
                android:id="@+id/tomap"
                style="@style/textview"
                android:text="@string/tomap"/>

            <TextView
                android:id="@+id/tomap1"
                style="@style/textview"
                android:text="@string/tomap1"/>

            <TextView
                android:id="@+id/swiperecycler"
                style="@style/textview"
                android:text="@string/swiperecycler"/>

            <TextView
                android:id="@+id/recyclerload"
                style="@style/textview"
                android:text="@string/recyclerload"/>

            <TextView
                android:id="@+id/recycleswipe"
                style="@style/textview"
                android:text="@string/swiperecycler"/>

            <TextView
                android:id="@+id/baidumap"
                style="@style/textview"
                android:text="@string/baidumap"/>

            <TextView
                android:id="@+id/swipalpha"
                style="@style/textview"
                android:text="@string/alpha"/>
        </LinearLayout>
    </FrameLayout>
</ScrollView>